--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,4 +1,4 @@
-import = [
+general.import = [
   "~/.config/alacritty/catppuccin-mocha.toml"
 ]
 
@@ -6,24 +6,8 @@ import = [
 TERM = "xterm-256color"
 
 [font]
-size = 14.0
-
-[font.bold]
-# family = "MesloLGS Nerd Font Mono"
-family = "CaskaydiaCove Nerd Font"
-style = "Bold"
-
-[font.bold_italic]
-family = "CaskaydiaCove Nerd Font"
-# family = "MesloLGS Nerd Font Mono"
-style = "Bold Italic"
-
-[font.italic]
-family = "CaskaydiaCove Nerd Font"
-# family = "MesloLGS Nerd Font Mono"
-style = "Italic"
+size = 11.0
 
 [font.normal]
-# family = "MesloLGS Nerd Font Mono"
-family = "CaskaydiaCove Nerd Font"
+family = "MesloLGS Nerd Font Mono"
 style = "Regular"
