--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,7 +4,7 @@ bind r source-file ~/.tmux.conf
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
-set -g prefix C-s
+set -g prefix C-b
 
 set -g mouse on
 
@@ -17,7 +17,7 @@ bind-key l select-pane -R
 
 set-option -g status-position top
 
-# set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
 
 # List of plugins
