--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -96,8 +96,11 @@ enable-ipc = true
 
 ; override-redirect = true
 
-[module/systray]
-type = internal/tray
+# [module/systray]
+# type = internal/tray
+
+[module/systemtray]
+type = internal/systemtray
 
 format-margin = 8pt
 tray-spacing = 16pt
