--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -37,7 +37,7 @@ monitor=,preferred, auto, 1.25
 $terminal = ghostty
 $fileManager = nautilus
 $menu = rofi -show drun -show-icons
-$browser = flatpak run app.zen_browser.zen
+$browser = google-chrome-stable
 
 #################
 ### AUTOSTART ###
