--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -71,6 +71,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec alacritty
+bindsym $mod+Shift+f exec nautilus
 
 # kill focused window
 bindsym $mod+q kill
