Make hyprland look good

--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/jothishjj/Desktop/Every+Astrology.png
-wallpaper = , /home/jothishjj/Desktop/Every+Astrology.png
+preload = /home/jothishjj/.config/backgrounds/lofiwallpaper.png
+wallpaper = monitor, /home/jothishjj/.config/backgrounds/lofiwallpaper.png
