Make alacritty transparent

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -35,7 +35,7 @@ monitor = eDP-1, preferred, auto, 1.25
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
+$terminal = alacritty
 $fileManager = nautilus
 $menu = rofi -show drun
 
@@ -54,7 +54,9 @@ $menu = rofi -show drun
 exec-once = waybar
 exec-once = swaync
 exec-once = hypridle
-exec-once = blueman
+exec-once = blueman-applet
+exec-once = hyprpaper
+exec-once = nm-applet
 
 
 #############################
