Change default browser

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -38,6 +38,7 @@ monitor = eDP-1, preferred, auto, 1.25
 $terminal = alacritty
 $fileManager = nautilus
 $menu = rofi -show drun
+$browser = flatpak run app.zen_browser.zen
 
 
 #################
@@ -247,6 +248,8 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = superShift, J, togglesplit, # dwindle
+bind = $mainMod, B, exec, $browser
+
 
 bind = , PRINT, exec, hyprshot -m region
 bind = Shift, Print, exec, hyprshot -m window
